--- a/src/app/analytics/analytics.component.html
+++ b/src/app/analytics/analytics.component.html
@@ -1,7 +1,7 @@
 <div class="row"style="justify-content: center">
   <div class="col-sm-2">
     <div class="form-group">
-      <label for="distrcit1">District</label>
+      <label for="distrcit1">District1</label>
       <select id="distrcit1" class="form-control form-control-sm" (change)="onDistrict1Select($event.target.value)">
         <option>Select District</option>
         <option Value="Dhaka">Dhaka</option>
