--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,13 +7,13 @@
         <a class="dropdown-toggle" (click)="showLi($event.target)">Comparison</a>
         <ul class="collapse list-unstyled show">
           <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-            <a routerLink="datasetcomperison">Dataset</a>
+            <a routerLink="datasetcomperison">Multiple Datasets</a>
           </li>
           <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-            <a routerLink="zilabasedcompersion">District Based</a>
+            <a routerLink="zilabasedcompersion">Multiple Districts</a>
           </li>
           <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
-            <a routerLink="monthbasedcompersion">Month Based </a>
+            <a routerLink="monthbasedcompersion">Single District (Yearly) </a>
           </li> <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
             <a routerLink="yearrangecompersion">Year Range </a>
           </li>
