--- a/src/app/inappmessage/all/all.component.html
+++ b/src/app/inappmessage/all/all.component.html
@@ -23,29 +23,29 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">Start Bootstrap</a>
+    <a class="navbar-brand" href="#">Analytics</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
-    </div>
+<!--    <div class="collapse navbar-collapse" id="navbarResponsive">-->
+<!--      <ul class="navbar-nav ml-auto">-->
+<!--        <li class="nav-item active">-->
+<!--          <a class="nav-link" href="#">Home-->
+<!--            <span class="sr-only">(current)</span>-->
+<!--          </a>-->
+<!--        </li>-->
+<!--        <li class="nav-item">-->
+<!--          <a class="nav-link" href="#">About</a>-->
+<!--        </li>-->
+<!--        <li class="nav-item">-->
+<!--          <a class="nav-link" href="#">Services</a>-->
+<!--        </li>-->
+<!--        <li class="nav-item">-->
+<!--          <a class="nav-link" href="#">Contact</a>-->
+<!--        </li>-->
+<!--      </ul>-->
+<!--    </div>-->
   </div>
 </nav>
 
@@ -84,29 +84,36 @@
 
   <div class="row">
     <div class="col-md-8 mb-5">
-      <h2>Our Study Area- Dhaka  <a class="btn btn-success btn-sm" (click)="onViewAnalyticsClick()">View Analytics &raquo;</a> </h2>
+      <h2>Our Study Area- Dhaka  <a class="btn btn-success btn-sm"  style="color: white" (click)="onViewAnalyticsClick()">View Analytics &raquo;</a> </h2>
       <hr>
-      <img src="../../../assets/dhaka.png" alt="" srcset="" style="height: 500px;width: 500px">
+<!--      <img src="../../../assets/dhaka.png" (click)="onImageClick($event)" alt="" srcset="" style="max-height: 500px;max-width: 500px">-->
+      <div class="map"
+           leaflet
+           [leafletOptions]="options"
+           [leafletLayersControl]="layersControl">
+      </div>
 
     </div>
     <div class="col-md-4 mb-5">
       <h2>Types Of Analysis</h2>
       <hr>
       <ul>
-        <li>Comparison Between Two Datasets</li>
-        <li>Comparision of adsadas</li>
-        <li>Comparision of adsadas</li>
-        <li>Comparision of adsadas</li>
+        <li>Time Series Analysis</li>
+        <li>Single District (Monthly)</li>
+        <li>District based Comparison</li>
+        <li>Comparison between two district at same date</li>
+
       </ul>
     </div>
   </div>
   <!-- /.row -->
-  <div class="row justify-content-center">
-    <div class="col-sm-6">
+  <div class="row justify-content-center" style="margin-top: 30%">
+    <div class="col-sm-12">
       <h1 style="text-align: center">Technology Used</h1>
     </div>
+    <hr>
   </div>
-  <hr>
+
 
   <div class="row">
     <div class="col-md-4 mb-5">
@@ -127,7 +134,7 @@
 <!-- Footer -->
 <footer class="py-5 bg-dark">
   <div class="container">
-    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
   </div>
   <!-- /.container -->
 </footer>
