--- a/src/app/inappmessage/all/all.component.html
+++ b/src/app/inappmessage/all/all.component.html
@@ -107,24 +107,35 @@
     </div>
   </div>
   <!-- /.row -->
-  <div class="row justify-content-center" style="margin-top: 30%">
+  <div class="row justify-content-center" style="margin-top: 25%">
     <div class="col-sm-12">
-      <h1 style="text-align: center">Technology Used</h1>
+      <h1 style="text-align: center">About</h1>
     </div>
     <hr>
   </div>
 
 
-  <div class="row">
-    <div class="col-md-4 mb-5">
-      <img src="../../../assets/python.png" style="max-height: 250px;max-width: 250px">
-    </div>
-    <div class="col-md-4 mb-5">
-      <img src="../../../assets/spring-boot-logo.png" style="max-height: 250px;max-width: 250px">
-    </div>
-    <div class="col-md-4 mb-5">
-      <img src="../../../assets/angular.png" style="max-height: 250px;max-width: 250px">
-    </div>
+  <div class="row justify-content-center" style="margin-bottom: 5%">
+   <div class="col-sm-10">
+     <i>
+       Greenness analysis refers to the analysis of forestation and green areas of a certain area.
+       Remote sensing using satellite imaging is by far the most useful and easy wayto do it.
+       The purpose of this study is to create a systemic database of all 13 districts of Dhaka
+       Division for greenness analysis. In this tool we demonstrate how the greenness of 13 districts in Dhaka Division is changed
+       in last 15 years using Moderate-resolution Imaging Spectroradiometer(MODIS) Normalized Difference
+       Vegetation Index (NDVI) data. NDVI values from 2001-2015 of MODIS are used to extract the greenness
+       of this regions and to show greennesshas changed
+     </i>
+   </div>
+<!--    <div class="col-md-4 mb-5">-->
+<!--      <img src="../../../assets/python.png" style="max-height: 250px;max-width: 250px">-->
+<!--    </div>-->
+<!--    <div class="col-md-4 mb-5">-->
+<!--      <img src="../../../assets/spring-boot-logo.png" style="max-height: 250px;max-width: 250px">-->
+<!--    </div>-->
+<!--    <div class="col-md-4 mb-5">-->
+<!--      <img src="../../../assets/angular.png" style="max-height: 250px;max-width: 250px">-->
+<!--    </div>-->
   </div>
 <!--   /.row-->
 
@@ -134,7 +145,7 @@
 <!-- Footer -->
 <footer class="py-5 bg-dark">
   <div class="container">
-    <p class="m-0 text-center text-white">Copyright &copy; Your Website 2020</p>
+    <p class="m-0 text-center text-white">Copyright &copy; Greenness Analysis Tool 2020</p>
   </div>
   <!-- /.container -->
 </footer>
