--- a/src/app/inappmessage/all/all.component.html
+++ b/src/app/inappmessage/all/all.component.html
@@ -23,7 +23,7 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand" href="#">Analytics</a>
+    <a class="navbar-brand" href="#">Satellite Remote Sensing</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
             aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -98,10 +98,18 @@
       <h2>Types Of Analysis</h2>
       <hr>
       <ul>
-        <li>Time Series Analysis</li>
-        <li>Single District (Monthly)</li>
-        <li>District based Comparison</li>
-        <li>Comparison between two district at same date</li>
+        <li>
+          <a href="http://localhost:4200/analytis/yearrangecompersion">Time Series Analysis</a>
+        </li>
+        <li>
+          <a href="http://localhost:4200/analytis/monthbasedcompersion">Single District (Monthly)</a>
+        </li>
+        <li>
+          <a href="http://localhost:4200/analytis/zilabasedcompersion">District based Comparison</a>
+        </li>
+        <li>
+          <a href="http://localhost:4200/analytis/datasetcomperison">Comparison between two district at same date</a>
+        </li>
 
       </ul>
     </div>
