--- a/src/app/noti-all/noti-all.component.html
+++ b/src/app/noti-all/noti-all.component.html
@@ -7,8 +7,8 @@
       <div class="col-sm-3">
 
         <select id="distrcit1" class="form-control form-control-sm" (change)="onDistrictSelect($event.target.value)">
-          <option>Select District</option>
-          <option Value="Dhaka">Dhaka</option>
+
+          <option Value="Dhaka" selected>Dhaka</option>
           <option value="Faridpur">Faridpur</option>
           <option value="Gazipur">Gazipur</option>
           <option value="Gopalganj">Gopalganj</option>
@@ -26,8 +26,8 @@
       <div class="col-sm-3">
         <div class="form-group">
           <select id="year1" class="form-control form-control-sm" (change)="onYearSelect($event.target.value)">
-            <option>Select Year</option>
-            <option Value="2001">2001</option>
+
+            <option Value="2001" selected>2001</option>
             <option value="2002">2002</option>
             <option value="2003">2003</option>
             <option value="2004">2004</option>
