--- a/src/app/analytics/analytics.component.html
+++ b/src/app/analytics/analytics.component.html
@@ -3,8 +3,7 @@
     <div class="form-group">
       <label for="distrcit1">District1</label>
       <select id="distrcit1" class="form-control form-control-sm" (change)="onDistrict1Select($event.target.value)">
-        <option>Select District</option>
-        <option Value="Dhaka">Dhaka</option>
+        <option Value="Dhaka" selected>Dhaka</option>
         <option value="Faridpur">Faridpur</option>
         <option value="Gazipur">Gazipur</option>
         <option value="Gopalganj">Gopalganj</option>
@@ -24,8 +23,7 @@
     <div class="form-group">
       <label for="year1">Year1</label>
       <select id="year1" class="form-control form-control-sm" (change)="onYear1Select($event.target.value)">
-        <option>Select District</option>
-        <option Value="2001">2001</option>
+        <option Value="2001" selected>2001</option>
         <option value="2002">2002</option>
         <option value="2003">2003</option>
         <option value="2004">2004</option>
@@ -47,8 +45,8 @@
     <div class="form-group">
       <label for="distrcit2">District2</label>
       <select id="distrcit2" class="form-control form-control-sm" (change)="onDistrict2Select($event.target.value)">
-        <option>Select District</option>
-        <option Value="Dhaka">Dhaka</option>
+
+        <option Value="Dhaka" selected>Dhaka</option>
         <option value="Faridpur">Faridpur</option>
         <option value="Gazipur">Gazipur</option>
         <option value="Gopalganj">Gopalganj</option>
@@ -68,8 +66,7 @@
     <div class="form-group">
       <label for="year2">Year2</label>
       <select id="year2" class="form-control form-control-sm" (change)="onYear2Select($event.target.value)">
-        <option>Select District</option>
-        <option Value="2001">2001</option>
+        <option Value="2001" >2001</option>
         <option value="2002">2002</option>
         <option value="2003">2003</option>
         <option value="2004">2004</option>
@@ -78,12 +75,12 @@
         <option value="2007">2007</option>
         <option value="2008">2008</option>
         <option value="2009">2009</option>
-        <option value="2010">2010</option>
+        <option value="2010" selected>2010</option>
         <option value="2011">2011</option>
         <option value="2012">2012</option>
         <option value="2013">2013</option>
         <option value="2014">2014</option>
-        <option value="2015">2015</option>
+        <option value="2015" >2015</option>
       </select>
     </div>
   </div>
