--- a/src/app/analytics/analytics.component.html
+++ b/src/app/analytics/analytics.component.html
@@ -1,7 +1,11 @@
+<div class="row" style="    justify-content: center;">
+  <h4 style="text-align:center"><i>{{title}}</i></h4>
+</div>
 <div class="row"style="justify-content: center">
+ 
   <div class="col-sm-2">
     <div class="form-group">
-      <label for="distrcit1">District1</label>
+      <label for="distrcit1">District 1</label>
       <select id="distrcit1" class="form-control form-control-sm" (change)="onDistrict1Select($event.target.value)">
         <option Value="Dhaka" selected>Dhaka</option>
         <option value="Faridpur">Faridpur</option>
@@ -21,7 +25,7 @@
   </div>
   <div class="col-sm-2">
     <div class="form-group">
-      <label for="year1">Year1</label>
+      <label for="year1">Year 1</label>
       <select id="year1" class="form-control form-control-sm" (change)="onYear1Select($event.target.value)">
         <option Value="2001" selected>2001</option>
         <option value="2002">2002</option>
@@ -43,7 +47,7 @@
   </div>
   <div class="col-sm-2">
     <div class="form-group">
-      <label for="distrcit2">District2</label>
+      <label for="distrcit2">District 2</label>
       <select id="distrcit2" class="form-control form-control-sm" (change)="onDistrict2Select($event.target.value)">
 
         <option Value="Dhaka" selected>Dhaka</option>
@@ -64,7 +68,7 @@
   </div>
   <div class="col-sm-2">
     <div class="form-group">
-      <label for="year2">Year2</label>
+      <label for="year2">Year 2</label>
       <select id="year2" class="form-control form-control-sm" (change)="onYear2Select($event.target.value)">
         <option Value="2001" >2001</option>
         <option value="2002">2002</option>
