--- a/src/app/comparsion/comparsion.component.html
+++ b/src/app/comparsion/comparsion.component.html
@@ -1,5 +1,8 @@
-<div class="container" style="text-align: center">
 
+<div class="container" style="text-align: center">
+  <div class="row" style="    justify-content: center;">
+    <h4 style="text-align:center"><i>Comparsion Between Two Dataset</i></h4>
+  </div>
   <form (ngSubmit)="onViewButtonClick(queryForm)" #queryForm="ngForm">
     <div class="row">
       <div class="col-md-2">
