--- a/src/app/noti-all/noti-all.component.html
+++ b/src/app/noti-all/noti-all.component.html
@@ -1,4 +1,4 @@
-<h4 style="text-align:center"> Month Based Bar Graph of A Year For One District
+<h4 style="text-align:center"> <i>Month Based Bar Graph of A Year For One District</i>
   <br/><br/>
 
 
