--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,4 +1,4 @@
-<h4 style="text-align: center">Time Series Analysis of Greeenness for {{district}} from {{startYear}} to {{endYear}}</h4>
+<h4 style="text-align: center"><i>{{title}}</i></h4>
 <div class="row" style="justify-content: center">
   <div class="col-sm-3">
     <div class="form-group">
